docs/static/style.css
/* ... */
.full {
    border-radius: 0;
    width: 100%;
    margin: 0;
    position: fixed;
    top: 0;
    left: 0;
    transition: all 0.3s linear;
}

nav ul {
    list-style: none;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    margin-right: 42px;
}

nav li {
    height: 50px;
}

nav a {
    height: 100%;
    padding: 0 30px;
    text-decoration: none;
    display: flex;
    align-items: center;
    color: var(--font);
}

nav a:hover {
    background-color: var(--main-bg-secondary);
    border: var(--main-bg-secondary);
    border-radius: 8px;
    transition: all 1s;
}

nav li:first-child {
    margin-right: auto;
}

.logo {
    height: 64px;
    width: auto;
    filter: none;
}

.sidebar {
    position: fixed;
    top: 0;
    right: 0;
    height: 100vh;
    width: 250px;
    z-index: 999;
    background-color: var(--main-bg);
    backdrop-filter: blur(10px);
    box-shadow: -10px 0 10px #1f2937;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    margin-top: 0;
    margin-right: 0;
    transform: translateX(100%);
    opacity: 0;
    transition: transform 0.6s ease, opacity 0.3s ease;
}

.open {
    transform: translateX(0); /* Added */
    opacity: 1; /* Added */
}

.sidebar li {
    width: 100%;
    padding-top: 20px;
}

.sidebar a {
    width: 100%;
}

.sidebar a:hover {
    color: var(--font);
}

nav img {
    height: 26px;
    width: 26px;
    filter: invert();
}

.menubtn {
    display: none;
}

.secone {
    background-color: none;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 1;
    align-items: center;
    gap: 0em;
    color: var(--font);
    font-size: 1.1em;
    text-align: justify;
}

.secone h1{
    font-size: 4em;
}

.secone h3,
.secone h1 {
    margin: 0;
}

.secone img{
    max-width: 200px;
    margin-top: 11em;
    margin-bottom: 1em;
}

.secone a{
    margin-bottom: 6em;
}

.seconebutton {
    background-color: var(--secondary);
    color: var(--font);
    border-radius: 8px;
    font-size: large;
    padding: 0.5em 2em;
    border: 0;
    font-weight: 400;
    margin-top: 64px;
    box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.75);
}

.seconebutton:hover {
    background-color: var(--main-bg-secondary);
    transition: ease-in-out 0.5s;
}


.sectwo {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-content: baseline;
    padding: 3em;
    margin: 3em;
    color: var(--font);
    text-align: justify;
}

.sectwo .left {
    display: flex;
    flex-direction: column;
    margin-top: 2em;
}

.sectwo .left h2{
    color: var(--font);
    margin-bottom: 0;
    font-size: large;
}

.sectwo .left h3{
    color: var(--primary);
    margin-top: 0;
    font-size: xx-large;
}

.sectwo .left p{
    max-width: 69em;
}

.sectwobutton {
    background-color: var(--secondary);
    color: var(--font);
    border-radius: 8px;
    font-size: large;
    padding: 0.5em 2em;
    border: 0;
    font-weight: 400;
    margin-top: 8px;
    box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.75);
}

.sectwobutton:hover {
    background-color: var(--main-bg-secondary);
    transition: ease-in-out 0.5s;
}

.sectwo .right {
    margin: 3em 0 0 4em;
}

.sectwo .right img {
    max-width: 30em;
    border: solid #313D5A 2px;
    border-radius: 8px;
    box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.75);
}

#aboutus .right img{
    max-width: 24em;
}

#philosophy .right {
    margin: 3.6em 4em 0em 0em;
}

#philosophy .right img{
    border-radius: 12px;
    max-width: 24em;
}

#principles{
    padding: 2em;
    position: relative;
    z-index: 1;
}

#principles .left ul {
    display: flex;
    flex-direction: column;
    padding-left: 0;
}

#principles .left ul li {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    gap: 2em;
    text-align: left;
}

#principles .left ul li img {
    height: 20px;
    width: auto;
}

#principles .left ul li .text {
    display: flex;
    flex-direction: column;
}

#principles .left ul li strong {
    color: var(--primary);
}

#principles::before{
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    background-image: url("var(--baseurl)/static/images/logo.png");
    background-repeat: no-repeat;
    background-size: cover;
    filter: blur(8px);
    opacity: 0.5;
    z-index: -1;
}

.prices-container {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-wrap: wrap;
    gap: 10%;
}

.price-box{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: solid var(--main-sec) 8px;
    border-radius: 24px;
    color: var(--font);
    margin: 3em 0em 3em 0em;
    padding: 20px;
    max-width: 320px;
    background-color: var(--main-bg-secondary);
}

.price-box ul {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    margin: 0px 8px 0px 8px;
    padding: 12px;
}

.price-box ul li {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
    margin: -18px;
}

.price-box span{
    font-size: x-large;
    color: var(--primary);
    margin-bottom: 8px;
}

.price-box ul li img {
    height: 20px;
    width: auto;
    filter: invert(67%) sepia(71%) saturate(3162%) hue-rotate(84deg) brightness(113%) contrast(109%);
}

.price-box h2{
    color: var(--primary);
    margin-bottom: 0;
}

.price-box h3{
    font-size: medium;
    color: var(--primary);
    margin-bottom: 0;
}

.price-box button {
    margin-top: 20px;
    margin-bottom: 1em;
}

.portfolio {
    background-color: none;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 1;
    align-items: center;
    gap: 0em;
    color: var(--font);
    font-size: 1.1em;
    text-align: center;
}
/* ... */

